--- a/SunamoStringParts/SunamoStringParts.csproj
+++ b/SunamoStringParts/SunamoStringParts.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>25.12.21.1</Version>
+    <Version>25.12.31.1</Version>
     <Description>Removing / keeping parts of the string according to the position of the substring
       in it</Description>
     <Authors>www.sunamo.cz</Authors>
@@ -14,7 +14,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>feat: Added net10.0 to TargetFrameworks</PackageReleaseNotes>
+    <PackageReleaseNotes>feat: better naming for variables</PackageReleaseNotes>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <None Include="readme.md" Pack="True" PackagePath="." />
